--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ html {
   background-color: var(--skyblue)
 }
 
-text {
+text, p, li {
   font-family: 'Poppins', sans-serif;
   font-size: 125%;
 }
@@ -39,6 +39,13 @@ text {
 
 .title {
   font-size: 350%;
+  font-family: 'Lilita One', cursive;
+  color: black;
+}
+
+.subheading {
+  font-size: 200%;
+  margin: 0.5em 0;
   font-family: 'Lilita One', cursive;
   color: black;
 }
@@ -70,4 +77,10 @@ text {
 .values > text {
   display: flex;
   flex-direction: column;
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
