--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,9 @@ ol {
   flex-direction: column;
   align-items: center;
 }
+
+#spotifyembedcontainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
